// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input should render self and components 1`] = `
<input
  autoFocus={false}
  data-hj-whitelist={true}
  onChange={[Function]}
  style={
    Object {
      "boxSizing": "border-box",
      "padding": ".8rem 1rem",
    }
  }
  type="text"
  value="Praia de Botafogo"
/>
`;

exports[`Input should render self and components with addressQuery 1`] = `
<input
  autoFocus={false}
  data-hj-whitelist={true}
  onChange={[Function]}
  style={
    Object {
      "boxSizing": "border-box",
      "padding": ".8rem 1rem",
    }
  }
  type="text"
  value="123412"
/>
`;
